--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,12 @@
     "footer";
 }
 
+body {
+  font-family: "Boldonse", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
 header {
   grid-area: header;
 }
