--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -27,3 +27,33 @@ header ul li {
   justify-self: end;
   cursor: pointer;
 }
+
+.themeCircle {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  pointer-events: none;
+  transform: translate(-50%, -50%) scale(0);
+  transition: transform 0.8s ease-out;
+  z-index: 9999;
+  background-color: #191818;
+}
+
+.themeCircleDark {
+  background-color: #0a0a0a;
+}
+
+.themeCircleLight {
+  background-color: #ffffff;
+}
+
+.themeCircleExpand {
+  transform: translate(-50%, -50%) scale(120);
+}
+
+.themeCircleShrink {
+  transform: translate(-50%, -50%) scale(0);
+}
