--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,15 @@
 header {
+  background-color: var(--base-color);
   display: grid;
   grid-template-columns: 1fr 550px 1fr;
   align-items: center;
   padding: 0rem 2rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  border-bottom: 1px solid var(--primary-text-color);
+  z-index: 999;
 }
 
 header ul {
